--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,12 @@ section.recent.blogs {
 section.recent.blogs .recent-container {
     flex-direction: column;
 }
-
+.div-recent-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+}
 section.recent.blogs .recent-container .recent-card-container {
     padding: 30px 0;
     max-width: fit-content;
@@ -207,6 +212,7 @@ section.recent .recent-card-container .description {
     display: flex;
     justify-content: space-between;
     max-width: 280px;
+    gap: 20px;
 }
 
 section.recent .recent-card-container .description .line {
