--- a/views/works.hbs
+++ b/views/works.hbs
@@ -13,13 +13,13 @@
             <header>
                 <ul class="menu">
                     <li>
-                        <a href="blogs.html">Blog</a>
+                        <a href="/blogs">Blog</a>
                     </li>
                     <li>
-                        <a href="works.html" class="active">Works</a>
+                        <a href="/works" class="active">Works</a>
                     </li>
                     <li>
-                        <a href="index.html">Contacts</a>
+                        <a href="/">Contacts</a>
                     </li>
                 </ul>
                 <button class="burger" onclick="toggleMenu()">
